crates/reinhardt-pages/tests/ui/server_fnset/fail/empty_name.rs
use reinhardt_pages::server_fn::{ServerFnSet, ServerFnSetRegistration, server_fnset};

#[server_fnset(name = "")]
fn empty() -> impl ServerFnSetRegistration { ServerFnSet::new().named("unused") }

fn main() {}
