crates/reinhardt-pages/tests/ui/server_fnset/fail/empty_name.stderr
error: server function set name must not be empty
 --> tests/ui/server_fnset/fail/empty_name.rs:3:23
  |
3 | #[server_fnset(name = "")]
  |                       ^^

warning: unused imports: `ServerFnSetRegistration` and `ServerFnSet`
 --> tests/ui/server_fnset/fail/empty_name.rs:1:34
  |
1 | use reinhardt_pages::server_fn::{ServerFnSet, ServerFnSetRegistration, server_fnset};
  |                                  ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
